[package]
name = "credence_registry"
version = "0.1.0"
edition = "2021"
description = "Credence registry contract — maps identities to bond contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0"

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
